tests/syntax_tests/data/parsing/errors/expressions/object.res
let obj = {"\055": "octal escape", "\123": "another octal escape"}
